<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.caro.CaroApp" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical|clip_horizontal" >

        <Button
            android:id="@+id/one"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:minWidth="48dp"
            android:text="@string/one"
            android:textSize="50sp" />

        <Button
            android:id="@+id/two"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="top"
            android:minWidth="48dp"
            android:text="@string/two"
            android:textSize="50sp" />

        <Button
            android:id="@+id/three"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="top"
            android:minWidth="48dp"
            android:text="@string/three"
            android:textSize="50sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical|clip_horizontal" >

        <Button
            android:id="@+id/four"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="top"
            android:minWidth="48dp"
            android:text="@string/four"
            android:textSize="50sp" />

        <Button
            android:id="@+id/five"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="top"
            android:minWidth="48dp"
            android:text="@string/five"
            android:textSize="50sp" />

        <Button
            android:id="@+id/six"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="top"
            android:minWidth="48dp"
            android:text="@string/six"
            android:textSize="50sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical|clip_horizontal" >

        <Button
            android:id="@+id/seven"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="top"
            android:minWidth="48dp"
            android:text="@string/seven"
            android:textSize="50sp" />

        <Button
            android:id="@+id/eight"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="top"
            android:minWidth="48dp"
            android:text="@string/eight"
            android:textSize="50sp" />

        <Button
            android:id="@+id/nine"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="top"
            android:minWidth="48dp"
            android:text="@string/nine"
            android:textSize="50sp" />
    </TableRow>

    <TextView
        android:id="@+id/information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/info"
        android:textSize="25sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/human"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/human" />

            <TextView
                android:id="@+id/humanCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/ties"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ties" />

            <TextView
                android:id="@+id/tiesCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/android" />

            <TextView
                android:id="@+id/androidCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </TableRow>
    </TableLayout>

</LinearLayout>